[tool.poetry]
name = "piwik_pro_log_analytics"
readme = "README.md"
# This is managed by Github Actions
version = "0.0.1"
description = "Allows importing common web server log formats (nginx, apache, iss and more) directly to Piwik PRO. It's Free Software available under GPLv3 license, available on GitHub"
authors = ["Piwik PRO <kosto@piwik.pro>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
piwik_pro_log_analytics = "piwik_pro_log_analytics.import_logs:main"
